--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>vReserve</title>
   </head>
   <body>
+    <noscript>Sorry, this app doesn't work without javascript enabled!</noscript>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
     <!-- Optional JavaScript -->
